# cudafractal

./: .gitignore  README.md  cudafractal.py  fractal-cuda-simple.py  fractal-cuda.py  fractal-nocuda.py  fractal.py  palette.py  pyproject.toml  requirements.txt  test-array.py  test-keys.py  test-pixelarray.py  test-pygame.py  test-tkinter.py
colors/: colors.py
fractal/: colors.py  fractal.py  fractal_cpu.py  fractal_cuda.py  fractal_math.py  palette.py  utils_cuda.py
fractal_cuda/: colors_cuda.py  fractal_cuda.py  utils_cuda.py
fractal_no_cuda/: colors_no_cuda.py  fractal_no_cuda.py  utils_no_cuda.py
old_full_scripts/: fractal-cuda-simple.py  fractal_cuda.py  fractal_no_cuda.py  palette_test.py
test/: test-array.py  test-custom-decorator.py  test-display-array.py  test-funcname.py  test-keys.py  test-np-vectorize.py  test-profiling.py
ui/: appState.py  defaults.py  info.py  keys_config.py  main_profiling.py  main_ui.py  palette.py  screenshot.py
utils/: appState.py  const.py  cuda.py  defaults.py  timer.py  types.py
utils_color/: palette.py
