[project]
name = "fractal-python-cuda"
version = "0.1.0"
authors = [{ name = "kyrlian", email = "kyrlian@gmail.com" }]
description = "Fractal generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numba>=0.60.0", "numpy>=2.0.2", "pygame>=2.6.1"]


[project.scripts]
fractal = "fractal_cuda.fractal_cuda:main"
fractalnocuda = "fractal_no_cuda.fractal_no_cuda:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fractal_cuda"]