[project]
name = "fractal-python-cuda"
version = "0.1.0"
authors = [{ name = "kyrlian", email = "kyrlian@gmail.com" }]
description = "Fractal generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pillow>=11.0.0",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
cuda = ["numba>=0.60.0"]

[project.scripts]
fractal = "ui.main_ui:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui", "fractal_cuda"]
